# rust-trade

./: .env.docker.example  .gitignore  .mcp.json  BACKPRESSURE_IMPLEMENTATION.md  Cargo.toml  HOT-RELOAD-IMPROVEMENTS.md  INPUT_VALIDATION.md  MULTI-TENANT-PLAN.md  QUICK_WINS_COMPLETED.md  RATE_LIMITING.md  README.md  SECURITY_TEST_RESULTS.md  SESSION_REVIEW.md  TICK-BAR-USAGE.md  TODO.md  WEBSOCKET-RATE-LIMITING-REVIEW.md  docker-compose.yml  requirements.txt
.claude/: CLAUDE.md
data-manager/: CLAUDE.md  Cargo.toml
data-manager/config/: default.toml  development.toml
data-manager/src/: lib.rs  main.rs
data-manager/src/backfill/: executor.rs  mod.rs  spend_tracker.rs
data-manager/src/cli/: backfill.rs  control_handler.rs  db.rs  fetch.rs  import.rs  mod.rs  serve.rs  symbol.rs
data-manager/src/cli/import/: kraken.rs  mod.rs
data-manager/src/config/: mod.rs  router.rs  routing.rs  settings.rs
data-manager/src/instruments/: mod.rs  registry.rs
data-manager/src/provider/: factory.rs  mod.rs  traits.rs
data-manager/src/provider/binance/: client.rs  mod.rs  normalizer.rs  symbol.rs  types.rs
data-manager/src/provider/databento/: client.rs  historical.rs  live.rs  metadata.rs  mod.rs  normalizer.rs
data-manager/src/provider/kraken/: client.rs  csv_parser.rs  mod.rs  normalizer.rs  symbol.rs  types.rs
data-manager/src/provider/mock/: mod.rs
data-manager/src/scheduler/: cron.rs  historical.rs  mod.rs
data-manager/src/schema/: conversion.rs  market_data.rs  mod.rs
data-manager/src/storage/: databento_instruments.rs  mod.rs  ohlc.rs  repository.rs  timescale.rs
data-manager/src/subscription/: filter.rs  manager.rs  mod.rs  patterns.rs
data-manager/src/symbol/: discovery.rs  mod.rs  registry.rs  universe.rs
data-manager/src/transport/: mod.rs  traits.rs
data-manager/src/transport/grpc/: mod.rs
data-manager/src/transport/ipc/: consumer.rs  control.rs  mod.rs  registry.rs  ring_buffer.rs  shared_memory.rs
data-manager/src/validation/: mod.rs  tests.rs  validator.rs
data-manager/tests/: ipc_stress_test.rs
integration-tests/: Cargo.toml  INTEGRATION-TESTS.md
integration-tests/config/: default.toml  heavy.toml  lite.toml  normal.toml
integration-tests/src/: config.rs  db_verifier.rs  db_writer.rs  emulator.rs  generator.rs  lib.rs  metrics.rs  report.rs
integration-tests/src/runner/: mod.rs  python_runner.rs  rust_runner.rs
integration-tests/src/strategies/: mod.rs  test_tick_counter.py  test_tick_counter.rs
integration-tests/src/transport/: direct.rs  mod.rs  websocket.rs
integration-tests/tests/: e2e_pipeline.rs  generator_tests.rs  latency_tests.rs
src-tauri/: CLAUDE.md  Cargo.toml
src-tauri/src/: commands.rs  main.rs  state.rs  types.rs
trading-common/: CLAUDE.md  Cargo.toml
trading-common/src/: lib.rs
trading-common/src/accounts/: account.rs  config.rs  mod.rs  types.rs
trading-common/src/backtest/: bar_generator.rs  engine.rs  metrics.rs  mod.rs  multi_engine.rs  portfolio.rs
trading-common/src/backtest/strategy/: base.rs  config.rs  dispatcher.rs  instance_config.rs  mod.rs  position.rs  python_bridge.rs  python_loader.rs  rsi.rs  security_tests.rs  sma.rs  state.rs
trading-common/src/config/: mod.rs  schema.rs  service.rs  validation.rs
trading-common/src/data/: backfill.rs  backfill_config.rs  cache.rs  dbn_types.rs  events.rs  gap_detection.rs  instrument_registry.rs  mod.rs  orderbook.rs  quotes.rs  repository.rs  sequence.rs  symbol_repository.rs  types.rs  validator.rs  validator_tests.rs
trading-common/src/error/: common.rs  mod.rs  traits.rs
trading-common/src/execution/: config.rs  context.rs  engine.rs  fill_model.rs  inflight_queue.rs  latency_model.rs  mod.rs  simulated_exchange.rs
trading-common/src/execution/matching/: core.rs  engine.rs  mod.rs
trading-common/src/execution/venue/: config.rs  error.rs  mod.rs  normalizer.rs  traits.rs  types.rs
trading-common/src/execution/venue/binance/: config.rs  endpoints.rs  factory.rs  mod.rs
trading-common/src/instruments/: continuous.rs  contract.rs  instrument.rs  mod.rs  registry.rs  roll_manager.rs  session.rs  session_manager.rs  symbol_definition.rs  symbol_resolver.rs  types.rs
trading-common/src/logging/: config.rs  json_layer.rs  mod.rs
trading-common/src/orders/: contingent_manager.rs  events.rs  manager.rs  mod.rs  order.rs  order_list.rs  types.rs
trading-common/src/risk/: engine.rs  fee_model.rs  mod.rs  types.rs
trading-common/src/series/: bars_context.rs  mod.rs
trading-common/src/state/: coordinator.rs  errors.rs  events.rs  managed.rs  mod.rs  registry.rs
trading-common/src/transforms/: atr.rs  change.rs  compose.rs  cross.rs  ema.rs  extremes.rs  mod.rs  registry.rs  rsi.rs  sma.rs  source.rs
trading-common/src/validation/: mod.rs  symbol.rs
trading-common/src/venue/: config.rs  connection.rs  error.rs  mod.rs  symbology.rs  types.rs
trading-common/src/venue/data/: mod.rs  traits.rs  types.rs
trading-common/src/venue/execution/: mod.rs  normalizer.rs  traits.rs  types.rs
trading-common/src/venue/http/: client.rs  mod.rs  rate_limiter.rs  signer.rs
trading-common/src/venue/websocket/: client.rs  mod.rs
trading-common/tests/: backtest_unified_test.rs  binance_testnet_integration.rs  kraken_futures_demo_integration.rs  kraken_integration.rs  strategy_execution_integration.rs  synthetic_bar_test.rs  test_python_strategies.rs  test_strategy_coexistence.rs
trading-core/: CLAUDE.md  Cargo.toml  README.md
trading-core/benches/: ohlc_benchmark.rs  repository_bench.rs
trading-core/examples/: tick_bar_backtest.rs
trading-core/src/: config.rs  lib.rs  main.rs  metrics.rs
trading-core/src/alerting/: evaluator.rs  handler.rs  mod.rs  rules.rs  tests.rs
trading-core/src/data_source/: ipc.rs  ipc_exchange.rs  mod.rs
trading-core/src/exchange/: binance.rs  errors.rs  mod.rs  rate_limiter.rs
trading-core/src/live_trading/: mod.rs  multi_symbol_processor.rs  ohlc_generator.rs  paper_trading.rs  paper_trading_tests.rs
trading-core/src/service/: errors.rs  market_data.rs  market_data_tests.rs  mod.rs  types.rs
(+94 files in other folders)
