[package]
name = "trading-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
trading-common = { path = "../trading-common" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = { version = "1.32", features = ["serde"] }
dotenvy = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
