[package]
name = "trading-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal"] }
rust_decimal = { version = "1.32", features = ["serde"] }
dbn.workspace = true
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
atty = "0.2"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde"] }
thiserror = "1.0"
dashmap = "6.0"
async-trait = "0.1"
redis = "0.23.0"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
notify = "6.1"
parking_lot = "0.12"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
dotenv = "0.15"
rust_decimal_macros = "1.32"
