[package]
name = "trading-core"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-common = { path = "../trading-common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal"] }
rust_decimal = { version = "1.32", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
rust_decimal_macros = "1.8"
redis = "0.23.0"
prometheus = "0.13"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] } 

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "repository_bench"
harness = false